--- a/hCommenter.Spa/package.json
+++ b/hCommenter.Spa/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@openapitools/openapi-generator-cli": "^2.16.3",
+    "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
