feat: add logging to sentry

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ GITHUB_USERNAME="CharlesEkkel"
 ACR_NAME=$RESOURCE_GROUP
 IDENTITY=$RESOURCE_GROUP-identity
 IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity"
+
+APP_ENVIRONMENT="Dev"
