--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ IDENTITY=$RESOURCE_GROUP-identity
 IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity"
 
 APP_ENVIRONMENT="Dev"
+
+SENTRY_DSN="<add in .env.local>"
