--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,5 @@
-version: "3.8"
-
 services:
-  api:
-    image: hcommenter:current
+  backend:
     build:
       context: hCommenter.Api
       dockerfile: build.Dockerfile
@@ -11,3 +8,19 @@ services:
     env_file:
       - .env
       - .env.local
+
+  frontend-dev:
+    profiles: [dev]
+    build:
+      context: hCommenter.Spa
+      target: dev
+    ports:
+      - "5173:5173"
+
+  frontend-prod:
+    profiles: [prod]
+    build:
+      context: hCommenter.Spa
+      target: prod
+    ports:
+      - "80:80"
