--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -56,12 +56,12 @@ jobs:
       - name: Construct api base image tag
         id: construct_base_api_tag
         shell: bash
-        run: echo "image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME} >> $GITHUB_OUTPUT
+        run: echo "image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}-api:base" >> $GITHUB_OUTPUT
 
       - name: Construct api full image tag
         id: construct_full_api_tag
         shell: bash
-        run: echo "image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_OUTPUT
+        run: echo "image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}-api:${BRANCH_NAME}" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
