--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -57,8 +57,8 @@ jobs:
         id: construct_tags
         shell: bash
         run: |
-          echo "base_image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}-api:base" >> $GITHUB_OUTPUT; \
-          echo "full_image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}-api:${BRANCH_NAME}" >> $GITHUB_OUTPUT;
+          echo "base_image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:base" >> $GITHUB_OUTPUT; \
+          echo "full_image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_OUTPUT;
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
