--- a/hCommenter.Api/cabal.project
+++ b/hCommenter.Api/cabal.project
@@ -3,3 +3,6 @@ tests: True
 
 -- Old package, has old deps. I'm lazy since this is just a package for testing.
 allow-newer: hedgehog-servant:all
+
+-- This is a bit cheeky but they need to update. Dep of opentelemetry package.
+allow-newer: proto-lens:base
