chore: move grafana config to env

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/
 APP_ENVIRONMENT="Dev"
 
 SENTRY_DSN="<add in .env.local>"
+
+LOGGING__GRAFANA_URL="logs-prod-026.grafana.net"
+LOGGING__GRAFANA_ACC="1094195"
+LOGGING__GRAFANA_TOKEN="<add in .env.local>"
