--- a/.env
+++ b/.env
@@ -8,9 +8,10 @@ ACR_NAME=$RESOURCE_GROUP
 IDENTITY=$RESOURCE_GROUP-identity
 IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity"
 
-APP_ENVIRONMENT="Dev"
-
-SENTRY_DSN="<add in .env.local>"
+APP__NAME="hCommenter.Api"
+APP__ENVIRONMENT="Dev"
+APP__PORT="8080"
+APP__BACKEND="SQLite"
 
 LOGGING__GRAFANA_URL="logs-prod-026.grafana.net"
 LOGGING__GRAFANA_ACC="1094195"
