chore: move some log funcs to 'Utilities'

--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -36,6 +36,7 @@ library
         Logging.Grafana
         Logging.LogContext
         Logging.LogEffect
+        Logging.Utilities
         Mapping.Comments
         Mapping.ExternalTypes
         Mapping.Typeclass
