--- a/.env
+++ b/.env
@@ -9,10 +9,11 @@ IDENTITY=$RESOURCE_GROUP-identity
 IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity"
 
 APP__NAME="hCommenter.Api"
-APP__ENVIRONMENT="Dev"
+APP__ENVIRONMENT="Testing"
 APP__PORT="8080"
 APP__BACKEND="SQLite"
 
+LOGGING__SEVERITY="DebugS"
 LOGGING__GRAFANA_URL="logs-prod-026.grafana.net"
 LOGGING__GRAFANA_ACC="1094195"
 LOGGING__GRAFANA_TOKEN="<add in .env.local>"
