--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ APP__ENVIRONMENT="Testing"
 APP__PORT="8080"
 APP__BACKEND="SQLite"
 
-LOGGING__SEVERITY="DebugS"
+LOGGING__SEVERITY="Info"
+LOGGING__VERBOSITY="V0"
 LOGGING__GRAFANA_URL="logs-prod-026.grafana.net"
 LOGGING__GRAFANA_ACC="1094195"
 LOGGING__GRAFANA_TOKEN="<add in .env.local>"
