--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ ACR_NAME=$RESOURCE_GROUP
 IDENTITY=$RESOURCE_GROUP-identity
 IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity"
 
-APP__NAME="hCommenter.Api"
-APP__ENVIRONMENT="Testing"
+APP__NAME="hCommenter-Api"
+APP__ENVIRONMENT="Development"
 APP__PORT="8080"
 APP__BACKEND="SQLite"
 
