feat: switch to servant-client for logging

--- a/.env
+++ b/.env
@@ -18,3 +18,4 @@ LOGGING__VERBOSITY="V0"
 LOGGING__GRAFANA_URL="logs-prod-026.grafana.net"
 LOGGING__GRAFANA_ACC="1094195"
 LOGGING__GRAFANA_TOKEN="<add in .env.local>"
+LOGGING__ENABLE_LOG_DEBUGGING_IN_CONSOLE="false"
