chore: update pipeline and other things

--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
-RESOURCE_GROUP="hcommenter"
-LOCATION="australiaeast"
-ENVIRONMENT="dev-$RESOURCE_GROUP"
-API_NAME="$RESOURCE_GROUP-api"
-FRONTEND_NAME="$RESOURCE_GROUP-ui"
-GITHUB_USERNAME="CharlesEkkel"
+RESOURCE_GROUP=hcommenter
+LOCATION=australiaeast
+ENVIRONMENT=dev-$RESOURCE_GROUP
+API_NAME=$RESOURCE_GROUP-api
+FRONTEND_NAME=$RESOURCE_GROUP-ui
+GITHUB_USERNAME=CharlesEkkel
 ACR_NAME=$RESOURCE_GROUP
 IDENTITY=$RESOURCE_GROUP-identity
-IDENTITY_ID="/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity"
+IDENTITY_ID=/subscriptions/28fdd7a9-76ba-4ba1-bf64-4111a495d818/resourcegroups/hcommenter/providers/Microsoft.ManagedIdentity/userAssignedIdentities/hcommenter-identity
 
-APP__NAME="hCommenter-Api"
-APP__ENVIRONMENT="Development"
-APP__PORT="8080"
-APP__BACKEND="SQLite"
+APP__NAME=hCommenter-Api
+APP__ENVIRONMENT=Development
+APP__PORT=8080
+APP__BACKEND=SQLite
 
-LOGGING__SEVERITY="Info"
-LOGGING__VERBOSITY="V0"
-LOGGING__GRAFANA_URL="logs-prod-026.grafana.net"
-LOGGING__GRAFANA_ACC="1094195"
+LOGGING__SEVERITY=Info
+LOGGING__VERBOSITY=V0
+LOGGING__GRAFANA_URL=logs-prod-026.grafana.net
+LOGGING__GRAFANA_ACC=1094195
 LOGGING__GRAFANA_TOKEN="<add in .env.local>"
-LOGGING__ENABLE_LOG_DEBUGGING_IN_CONSOLE="false"
+LOGGING__ENABLE_LOG_DEBUGGING_IN_CONSOLE=false
