chore: move dockerfiles and add cabal freeze properly

--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -79,7 +79,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: hCommenter.Api/
-          file: hCommenter.Api/base.Dockerfile
+          file: hCommenter.Api/deploy/build.Dockerfile
           # Unless explicitly requested, just build the new base from the old one.
           build-args: >
             BASE_IMAGE=${{ github.event.inputs.rebuild_api_base
@@ -98,11 +98,11 @@ jobs:
           run: make test-ci
 
       # Now actually create the API image.
-      - name: "Build, test and push: API full image"
+      - name: "Build and push: API full image"
         uses: docker/build-push-action@v6
         with:
           context: hCommenter.Api/
-          file: hCommenter.Api/build.Dockerfile
+          file: hCommenter.Api/deploy/run.Dockerfile
           build-args: BASE_IMAGE=${{ steps.construct_tags.outputs.base_image_tag }}
           push: true
           tags: ${{ steps.construct_tags.outputs.full_image_tag }}
