--- a/spa/package.json
+++ b/spa/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.71.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -26,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "orval": "^7.8.0",
+    "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
