feat(api): improve sorting with esqueleto

--- a/hCommenter.Api/hCommenter-Api.cabal
+++ b/hCommenter.Api/hCommenter-Api.cabal
@@ -70,6 +70,7 @@ library
         effectful-core,
         effectful-plugin,
         effectful-th,
+        esqueleto,
         extra,
         hedgehog,
         http-api-data,
@@ -125,6 +126,7 @@ executable hCommenter-Api
         effectful-core,
         effectful-plugin,
         effectful-th,
+        esqueleto,
         extra,
         hCommenter-Api,
         hedgehog,
@@ -200,6 +202,7 @@ test-suite spec
         effectful-core,
         effectful-plugin,
         effectful-th,
+        esqueleto,
         extra,
         hCommenter-Api,
         hedgehog,
