--- a/spa/package.json
+++ b/spa/package.json
@@ -11,6 +11,7 @@
     "generate-api": "orval"
   },
   "dependencies": {
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
