--- a/api/hCommenter-Api.cabal
+++ b/api/hCommenter-Api.cabal
@@ -6,10 +6,10 @@ cabal-version: 2.0
 
 name:               hCommenter-Api
 version:            0.1.0
-synopsis:           Backend for a generic commenting system.
+synopsis:           Backend & experimental frontend for a generic commenting system.
 description:        N/A
-author:             Charles Taylor <taylorc822@gmail.com>
-maintainer:         Charles Taylor <taylorc822@gmail.com>
+author:             Charles Taylor <mail@charlesekkel.me>
+maintainer:         Charles Taylor <mail@charlesekkel.me>
 license:            MIT
 category:           Web
 homepage:           https://github.com/cekkel/hCommenter#readme
@@ -98,7 +98,7 @@ library
     mixins:
         base hiding (Prelude),
         classy-prelude (ClassyPrelude as Prelude)
-    ghc-options: -Wall -fno-warn-orphans -fplugin=Effectful.Plugin
+    ghc-options: -Wall -fno-warn-orphans -Wredundant-constraints -Werror -fplugin=Effectful.Plugin
     hs-source-dirs:
         src
     default-language: GHC2024
@@ -114,6 +114,8 @@ library
 
 executable hCommenter-Api
     main-is: Main.hs
+    other-modules:
+        Frontend
     build-depends:
         PyF,
         aeson,
@@ -166,7 +168,7 @@ executable hCommenter-Api
         OverloadedLabels
         RecordWildCards
         MultiWayIf
-    ghc-options: -Wall -fno-warn-orphans
+    ghc-options: -Wall -fno-warn-orphans -Wredundant-constraints -Werror
     default-language: GHC2024
 
 test-suite spec
@@ -186,7 +188,7 @@ test-suite spec
         OverloadedLabels
         RecordWildCards
         MultiWayIf
-    ghc-options: -Wall -fno-warn-orphans
+    ghc-options: -Wall -fno-warn-orphans -Wredundant-constraints -Werror
     cpp-options: -DTEST
     build-tool-depends:
         hspec-discover:hspec-discover
